recursion.cons.lessons.recursion.cons.IsMember.scala.code
def isMember(l:List[Int], v:Int): Boolean = {
	if (l.length == 0)
	{
		return false;
	}
	else if (l.head == v)
	{
		return true
	}
	else return (l.tail, v)
}
